--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -33,7 +33,15 @@
 
 ტარკვინიუსმა კი, რადგან შეთქმულებით ვერაფერს ვერ მიაღწია, დაარწმუნა ეტრუსკები გამოსულიყვნენ რომაელების წინააღმდეგ. ბრძლაში დაიღუპა ბრუტუსიც და ტარკვინიუსის ვაჟი ატუნტუსიც. ისინი ბრძოლის დაწყების თანავე ეძგერნენ ერთმანეთს და შუბებით განგმირეს ერთმანეთი.
 
-ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა მაინც გაიმარჯვეს. ეს მოხდა რომის დაარსებიდან 
+ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა მაინც გაიმარჯვეს. ეს მოხდა რომის დაარსებიდან 245 წელს მარტის კანენდების წინა დღეს.{{სქოლიო|1|თარიღი}}
+
+==რესურსები ინტერნეტში==
+
+
+
+----
+
+* {{სქოლიო2|თარიღი}} სავარაუდოთ [[ძვ. წ. 508]] წლის [[28 თებერვალი|28 თებერვალს]]
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
