*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,6 +1,7 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
 '''ლუციუს იუნიუს ბრუტუსი''' (Lucius Iunius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 508]])
 
+
 ==ბრუტუსი მეფის დამხობამდე==
 
 ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი. მეფე ხელისუფლებასი უკანონოდ, სიმამრის ვერაგული მკვლელობით მოვიდა და მას ყოველთვის ეშინოდა რომ პრეცენდენტი შეიძლება განმეორდეს და ამიტომ გაწყვიტა არა მარტო უკმაყოფილო სენატორები, არამედ საკუთარი ნათესავებიც. ლუციუს იუნიუსი გონიერი ახალგაზრდა იყო და ადრევე მიხვდა, რომ თუ მეფე მასში გონიერ და ჭკვიან ადამიანს დაინახავს, მაშინ მის სიცოცხლეს სერიოზული საფრთხე დაემუქრება. ამიტომ იგი მრავალი წლის მანძილზე ყველას თავს უგუნურ ლენჩად აჩვენებდა. სწორედ აქედან წარმოიშვა მისი მეტსახელი ბრუტუსი.
@@ -36,6 +37,9 @@
 ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა მაინც გაიმარჯვეს. ეს მოხდა რომის დაარსებიდან 245 წელს მარტის კანენდების წინა დღეს.{{სქოლიო|1|თარიღი}}
 
 ==რესურსები ინტერნეტში==
+
+* [http://ancientrome.ru/antlitr/plutarch/sgo/poplicola-f.htm პლუტარქე "პარალელური ბიოგრაფიები", პოპლიკოლას ცხოვრების აღწერა]
+* [http://www.ancientrome.ru/antlitr/livi/kn02-f.htm ტიტუს ლივიუსი "რომის ისტორია ქალაქის დაარსებიდან"]
 
 
 
