--- a/რომის_რესპუბლიკის_კონსულების_სია.mw
+++ b/რომის_რესპუბლიკის_კონსულების_სია.mw
@@ -2,7 +2,7 @@
 
 ==ძვ. წ. VI საუკუნე==
 
-* [[ძვ. წ. 509|509]] ('''245''' A.V.C.{{სქოლიო|1|avc}}) - [[ლუციუს იუნიუს ბრუტუსი]], [[ლუციუს ტარკვინიუს კოლატინუსი]]
+* [[ძვ. წ. 509|509]] ('''245''' A.V.C.{{სქოლიო|1|avc}}) - [[ლუციუს იუნიუს ბრუტუსი]], ლუციუს ტარკვინიუს კოლატინუსი
 
 * [[ძვ. წ. 509|509]] ('''245''' A.V.C.) - [[პოპლიკოლა|პ. ვალერიუს ვოლუსი ფ. პუბლიკოლა]], სპ. ლუკრეციუს ტრიციპიტინუსი, მარკუს ჰორაციუს პულნუსი.
 
