--- a/ძვ._წ._506.mw
+++ b/ძვ._წ._506.mw
@@ -11,5 +11,7 @@
 
 ==გარდაიცვალნენ==
 
+* [[პოპლიკოლა|ვალერიუს ვოლუსი პოპლიკოლა]]  [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] წლებში.
+
 
 [[კატეგორია:ძვ. წ. 506|*]]
