*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -1,7 +1,7 @@
 '''ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] წლებში. (? - [[ძვ. წ. 506]]
 
 
-
+{{ესკიზი}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
