--- a/ძვ._წ._508.mw
+++ b/ძვ._წ._508.mw
@@ -11,5 +11,6 @@
 
 ==გარდაიცვალნენ==
 
+* [[ლუციუს იუნიუს ბრუტუსი]] [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]
 
 [[კატეგორია:ძვ. წ. 508|*]]
