*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -47,6 +47,8 @@
 
 * {{სქოლიო2|თარიღი}} სავარაუდოთ [[ძვ. წ. 508]] წლის [[28 თებერვალი|28 თებერვალს]]
 
+{{რესპუბლიკის მოღვაწეები}}
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 508]]
