*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -3,6 +3,8 @@
 
 {{ესკიზი}}
 
+{{რესპუბლიკის მოღვაწეები}}
+
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 506]]
