*Empty MediaWiki Message*

--- a/ციცერონი.mw
+++ b/ციცერონი.mw
@@ -7,9 +7,8 @@
 
 
 
+{{რესპუბლიკის მოღვაწეები}}
 
-
-[[კატეგორია:რომაელები]]
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:დაბადებული ძვ. წ. 106]]
 [[კატეგორია:გარდაცვლილი ძვ. წ. 43]]
