--- a/ძვ._წ._503.mw
+++ b/ძვ._წ._503.mw
@@ -11,6 +11,6 @@
 
 ==გარდაიცვალნენ==
 
-* [[პოპლიკოლა|ვალერიუს ვოლუსი პოპლიკოლა]]  [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] წლებში.
+* [[პოპლიკოლა|ვალერიუს ვოლუსი პოპლიკოლა]]  [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში.
 
 [[კატეგორია:ძვ. წ. 503|*]]
