--- a/სენატი.mw
+++ b/სენატი.mw
@@ -1,4 +1,4 @@
-[[ტერმინი]] '''სენატი''' თანამედროვე მნიშვნელობით საკანონმდებლო ორგანოს ნიშნავს, ხშირად მის ზედა პალატას. სიტყვა ''სენატი'' მომდინარეობს ლათინური senex-დან (უხუცესი მამაკაცი), რომლისგანაც მოდის სიტყვა senatus (სენატი). სენატის კანონმდებლებს ან წევრებს ''სენატორებს'' უწოდებენ. ამ სიტყვის მნიშვნელობა უძველესი მარტივი სოციალური ორგანიზაციიდან მოდის, სადაც გადაწყვეტილების მიღების ძალაუფლება უხუცესი მამაკაცის პრეროგატივა იყო. თავდაპირველი [[რომის სენატი|სენატი]] რომაელებმა შექმნეს, რომელმაც [[580]] წლამდე იარსება.
+'''სენატი''' თანამედროვე მნიშვნელობით საკანონმდებლო ორგანოს ნიშნავს, ხშირად მის ზედა პალატას. სიტყვა ''სენატი'' მომდინარეობს ლათინური senex-დან (უხუცესი მამაკაცი), რომლისგანაც მოდის სიტყვა senatus (სენატი). სენატის კანონმდებლებს ან წევრებს ''სენატორებს'' უწოდებენ. ამ სიტყვის მნიშვნელობა უძველესი მარტივი სოციალური ორგანიზაციიდან მოდის, სადაც გადაწყვეტილების მიღების ძალაუფლება უხუცესი მამაკაცის პრეროგატივა იყო. თავდაპირველი [[რომის სენატი|სენატი]] რომაელებმა შექმნეს, რომელმაც [[580]] წლამდე იარსება.
 
 თანამედროვე დემოკრატიული სახელმწიფოები ორ-პალატიანი საპარლამენტო სისტემით ხშირად ზემო პალატას სენატს უწოდებენ. მას, როგორც წესი ნაკლები წევრი ჰყავს, ვინემ ქვემო, თემთა პალატას.
 
