*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -3,7 +3,7 @@
 
 {{ესკიზი}}
 
-{{რესპუბლიკის მოღვაწეები}}
+{{რომის რესპუბლიკის მოღვაწეები}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
