*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -47,7 +47,7 @@
 
 * {{სქოლიო2|თარიღი}} სავარაუდოთ [[ძვ. წ. 508]] წლის [[28 თებერვალი|28 თებერვალს]]
 
-{{რესპუბლიკის მოღვაწეები}}
+{{რომის რესპუბლიკის მოღვაწეები}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:რომის კონსულები]]
