*Empty MediaWiki Message*

--- a/იულიუს_კეისარი.mw
+++ b/იულიუს_კეისარი.mw
@@ -1,10 +1,10 @@
 [[სურათი:Julius caesar.jpg|thumb|იულიუს კეისარი]]
-'''გაიუს იულიუს კეისარი''' ([[ლათინური ენა|ლათინურად]]: IMP•C•IVLIVS•CAESAR•DIVVS) დაიბადა [[ძვ. წ. 100]] წლის [[12 ივლისი|12]] ან [[13 ივლისი|13 ივლისს]] მოკლეს [[ძვ. წ. 44]] წლის [[15 მარტი|15 მარტს]]
+'''გაიუს იულიუს კეისარი''' ([[ლათინური ენა|ლათინურად]]: IMP•C•IVLIVS•CAESAR•DIVVS) (* [[12 ივლისი]]/[[13 ივლისი]], [[ძვ. წ. 100]]  ―   †  [[15 მარტი]], [[ძვ. წ. 44]] მოკლეს)
 
 
 {{ესკიზი}}
 
-{{რესპუბლიკის მოღვაწეები}}
+{{რომის რესპუბლიკის მოღვაწეები}}
 
 [[კატეგორია:ძველი რომი]]
 [[კატეგორია:დაბადებული_ძვ. წ. 100]]
