*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -1,4 +1,4 @@
-'''ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. (? - [[ძვ. წ. 503]])
+'''ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) (* ? ―   †   [[ძვ. წ. 503]]), [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. 
 
 
 {{ესკიზი}}
