*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,12 +1,12 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
-'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Iunius Brutus) [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]]  (? - [[ძვ. წ. 508]])
+'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Iunius Brutus), (* ? ―   †   [[ძვ. წ. 508]]), [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]].  
 
 
 ==ბრუტუსი მეფის დამხობამდე==
 
-ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი. მეფე ხელისუფლებასი უკანონოდ, სიმამრის ვერაგული მკვლელობით მოვიდა და მას ყოველთვის ეშინოდა რომ პრეცენდენტი შეიძლება განმეორდეს და ამიტომ გაწყვიტა არა მარტო უკმაყოფილო სენატორები, არამედ საკუთარი ნათესავებიც. ლუციუს იუნიუსი გონიერი ახალგაზრდა იყო და ადრევე მიხვდა, რომ თუ მეფე მასში გონიერ და ჭკვიან ადამიანს დაინახავს, მაშინ მის სიცოცხლეს სერიოზული საფრთხე დაემუქრება. ამიტომ იგი მრავალი წლის მანძილზე ყველას თავს უგუნურ ლენჩად აჩვენებდა. სწორედ აქედან წარმოიშვა მისი მეტსახელი ბრუტუსი.
+ლუციუს იუნიუსი იყო [[რომის სამეფო|რომის]] უკანასკნელი მეფის [[ლუციუს ტარკვინიუს სუპერბუსი|ლუციუს ტარკვინიუსის]] დის შვილი. მეფე ხელისუფლებაში უკანონოდ, სიმამრის ვერაგული მკვლელობით მოვიდა და მას ყოველთვის ეშინოდა რომ პრეცენდენტი შეიძლება განმეორდეს და ამიტომ გაწყვიტა არა მარტო უკმაყოფილო სენატორები, არამედ საკუთარი ნათესავებიც. ლუციუს იუნიუსი გონიერი ახალგაზრდა იყო და ადრევე მიხვდა, რომ თუ მეფე მასში გონიერ და ჭკვიან ადამიანს დაინახავს, მაშინ მის სიცოცხლეს სერიოზული საფრთხე დაემუქრება. ამიტომ იგი მრავალი წლის მანძილზე ყველას თავს უგუნურ ლენჩად აჩვენებდა. სწორედ აქედან წარმოიშვა მისი მეტსახელი ბრუტუსი.
 
-ერთხელ მეფის სასახლესი უცნაური რამ მოხდა, სასახლის სვეტიდან გამოძვრა გველი. ეს სიკვდილის ამღნიშნავი იყო. ამ ამბის განსამარტად მან [[დელფის ორაკული|დელფის ორაკულთან]] გაგზავნა თავისი ვაჟები ტიტუსი და არუნტუსი და მათთან ერთად ბრუტუსიც. ორაკულმა ჩასულებს ამცნო რომ რომში ძალაუფლება გადაუვა მას, ვინც პირველი აკოცებს დედას. ტარკვინიუსის ვაჟებმა ეს პირდაპირ გაიგეს, ხოლო ბრუტუსი მიხვდა წინასწარმეტყველების ნამდვილ შინაარს და აკოცა მიწას - ყველას საეთო დედას.
+ერთხელ მეფის სასახლესი უცნაური რამ მოხდა, სასახლის სვეტიდან გამოძვრა გველი. ეს სიკვდილის აღმნიშნავი იყო. ამ ამბის განსამარტად მან [[დელფის ორაკული|დელფის ორაკულთან]] გაგზავნა თავისი ვაჟები ტიტუსი და არუნტუსი და მათთან ერთად ბრუტუსიც. ორაკულმა ჩასულებს ამცნო რომ რომში ძალაუფლება გადაუვა მას, ვინც პირველი აკოცებს დედას. ტარკვინიუსის ვაჟებმა ეს პირდაპირ გაიგეს, ხოლო ბრუტუსი მიხვდა წინასწარმეტყველების ნამდვილ შინაარს და აკოცა მიწას - ყველას საეთო დედას.
 
 ==ტარკვინიუსის დამხობა==
 
