*Empty MediaWiki Message*

--- a/თეოდორ_მომზენი.mw
+++ b/თეოდორ_მომზენი.mw
@@ -5,7 +5,7 @@
 
 მომზენის ცნობილი ნაშრომის "რომის ისტორია", რომელშიც მან დაასაბუთა და განავითარა "დემოკრატიული მონარქიის" იდეა; მომზენის აზრით, ეს იდეა საუკეთესოდ იყო განხორციელებული იულიუს კეისრის დიქტატურის სახით. რომის ისტორია გადმოცემულია ძვ.წ. 46-მდე. მე-4 ტომი არ გამოქვეყნებულა. მე-5 ტომში რომის იმპერიის ეპოქის პროვინციის ისტორიაა მიმოხილული. თხზულება დაწერილია პოპულარულ ენაზე, სხარტად, შეიცავს დიდძალ ფაქტობრივ მასალას. 
 
-მომზენი ძირითადად სამხედრო-პოლიტიკურ ისტორიას იკვლევდა, თუმცა სოციალური ისტორიის ელემენტებსაც შეეხო. განსაკუთრებულ მნიშვნელობას ანიჭებდა დიდ ადამიანებს ([[ალექსანდრე მაკედონელი]], [[ჰანიბალი]], გაიუს გრაკქუსი, იულიუს კეისარი და სხვა). მომზენს ეკუთვნის 1500-ზე მეტი შრომა, გამოკვლეული აქვს რომის ისტორიის თითქმის ყველა საკითხი - სახელმწიფო სამართალი, [[ნუმიზმატიკა]], ეპიგრაფიკა,[[ ქრონოლოგია]], მეტროლოგია, ლიტერატურა, [[ლინგვისტიკა]].
+მომზენი ძირითადად სამხედრო-პოლიტიკურ ისტორიას იკვლევდა, თუმცა სოციალური ისტორიის ელემენტებსაც შეეხო. განსაკუთრებულ მნიშვნელობას ანიჭებდა დიდ ადამიანებს ([[ალექსანდრე მაკედონელი]], [[ჰანიბალი]], [[გაიუს გრაკქუსი]], [[იულიუს კეისარი]] და სხვა). მომზენს ეკუთვნის 1500-ზე მეტი შრომა, გამოკვლეული აქვს რომის ისტორიის თითქმის ყველა საკითხი - სახელმწიფო სამართალი, [[ნუმიზმატიკა]], ეპიგრაფიკა, [[ქრონოლოგია]], მეტროლოგია, ლიტერატურა, [[ლინგვისტიკა]].
 
 მომზენის ინიციატივით და ხელმძღვანელობით დაიწყეს ლათინური წარწერების კრებულის ("Corpus Inscriptionum latinarum") გამოცემა ([[1863]]-იდან). [[ნობელის პრემია|ნობელის პრემიის]] ლაურეატი ([[1902]]).
 
