*Empty MediaWiki Message*

--- a/ლუციუს_იუნიუს_ბრუტუსი.mw
+++ b/ლუციუს_იუნიუს_ბრუტუსი.mw
@@ -1,5 +1,5 @@
 [[სურათი:LuciusJuniusBrutus.jpg|thumb|ლუციუს იუნიუს ბრუტუსი]]
-'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Iunius Brutus), (* ? ―   †   [[ძვ. წ. 508]]), [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]].  
+'''ლუციუს იუნიუს ბრუტუსი''' (Lucius Iunius Brutus) (* ? ―   †   [[ძვ. წ. 508]]), [[რომის რესპუბლიკა|რომის რესპუბლიკის]] დამაარსებელი და პირველი [[კონსული]].  
 
 
 ==ბრუტუსი მეფის დამხობამდე==
