*Empty MediaWiki Message*

--- a/ფარსმან_VI.mw
+++ b/ფარსმან_VI.mw
@@ -1,1 +1,5 @@
-'''ფარსმან VI''' (* ???; † [[537]]) - [[იბერიის სამეფო|იბერიის]] უკანასკნელი მეფე [[535]]-[[537]] წლებში. მის დროს იბერია [[სასანიდური ირანი|სასანიდური ირანის]] ქვეშევრდომი იყო, მისი სიკვდილის შემდეგ კი ირანის შაჰმა[[ხოსრო I (ირანი)|ხოსრო  I]] ანუშირვანმა იბერიაში საბოლოოდ გააუქმა მეფობა და იბერია ირანის რიგითი პროვინცია გახდა. გადმოცემის მიხედვით სწორედ ფარსმან  VI-ის დროს ჩამოვიდა საქართველოში [[ცამეტი ასურელი მამა]].
+'''ფარსმან VI''' (* ???; † [[537]]) - [[იბერიის სამეფო|იბერიის]] უკანასკნელი მეფე [[535]]-[[537]] წლებში. მის დროს იბერია [[სასანიდური ირანი|სასანიდური ირანის]] ქვეშევრდომი იყო, მისი სიკვდილის შემდეგ კი ირანის შაჰმა [[ხოსრო I (ირანი)|ხოსრო  I]] ანუშირვანმა იბერიაში საბოლოოდ გააუქმა მეფობა და იბერია ირანის რიგითი პროვინცია გახდა. გადმოცემის მიხედვით სწორედ ფარსმან  VI-ის დროს ჩამოვიდა საქართველოში [[ასურელი მამები|ცამეტი ასურელი მამა]].
+
+
+[[კატეგორია:ქართველები]]
+[[კატეგორია:იბერიის მეფეები]]
