*Empty MediaWiki Message*

--- a/სან-ფრანცისკო.mw
+++ b/სან-ფრანცისკო.mw
@@ -21,7 +21,7 @@
 |-
 | [[ქაუნთი]]: || სან-ფრანცისკო
 |-
-| [[გეოგრაფიული მდებარეობა]]: || {{Koordinate Text Artikel|37_46_N_122_25_W_type:city(740000)_region:US-CA|37°&nbsp;46′&nbsp;N, 122°&nbsp;25′&nbsp;W}}	
+| [[გეოგრაფიული მდებარეობა]]: || 	
 |-
 | [[დროის სარტყველი]]: || წყნარი ოკეანის სტანდარტული დრო (UTC-8)
 |-
@@ -49,7 +49,7 @@
 |-
 ! style="background: #e3e3e3;" colspan="2" | სატელიტური ფოტო (1999)
 |-
-! colspan="2" | [[Bild:SanFranCity2.jpg|center|350px]]
+! colspan="2" | [[სურათი:SanFranCity2.jpg|center|350px]]
 |}
 
 ქალაქი და ქაუნთი '''სან-ფრანცისკო''' სიდიდით მეოთხეა [[აშშ]]-ის შტატ [[კალიფორნია|კალიფორნიაში]] და მე-14 აშშ-ში. სან-ფრანცისკო კათოლიკე წმინდანი ფრანკის ესპანური სახელია.
