--- a/გიორგი_II_(საქართველოს_მეფე).mw
+++ b/გიორგი_II_(საქართველოს_მეფე).mw
@@ -5,7 +5,7 @@
 
 '''გიორგი II''', [[საქართველოს სამეფო | საქართველოს]] მეფე [[1072]]-[[1089]], [[ბაგრატ IV|ბაგრატ IV-ის]] ძე.
 
-მას მძიმე საშინაო და საგარეო პირობებში მოუხდა მეფობა. [[1073]] მეფეს განუდგნენ დიდგვაროვანი ფეოდალები [[ნიანია ქვაბულის ძე|ნიანია ქვაბულის ძე]], [[ივანე ლიპარიტის ძე|ივანე ლიპარიტის ძე]] და [[ვარდან სვანთა ერისთავი|ვარდან სვანთა ერისთავი]]. ნიანია ქვაბულის ძემ  [[ქუთაისი|ქუთაისი]] დაიკავა, ივანე ლიპარიტის ძემ კახელები მოიშველია და ქსნისპირი დაიპყრო, ხოლო ვარდანმა სვანები ააჯანყა და საეგრო დაარბია. მათი დამორჩილების  შემდგომ გიორგი II გარკვეულ დათმობაზე წავიდა და ურჩი ყმები "წყალობით დაფარა". ივანე ლიპარტის ძეს [[სამშვილდე|სამშვილდე]] უბოძა, მის ვაჟს ლიპარტს - [[ლოწობანი|ლოწობანი]] [[რუსთავი|რუსთავის]] ნაცვლად (ეს უკანასკნელი კახელებს გადაეცა), ნიანია ქვაბულის ძეს - თმოგვი, ვარდან სვანთა ერისთავს - ასკალანა და სხვ.
+მას მძიმე საშინაო და საგარეო პირობებში მოუხდა მეფობა. [[1073]] მეფეს განუდგნენ დიდგვაროვანი ფეოდალები [[ქუაბულისძე, ნიანია|ნიანია ქვაბულის ძე]], [[ივანე ლიპარიტის ძე|ივანე ლიპარიტის ძე]] და [[ვარდან სვანთა ერისთავი|ვარდან სვანთა ერისთავი]]. ნიანია ქვაბულის ძემ  [[ქუთაისი|ქუთაისი]] დაიკავა, ივანე ლიპარიტის ძემ კახელები მოიშველია და ქსნისპირი დაიპყრო, ხოლო ვარდანმა სვანები ააჯანყა და საეგრო დაარბია. მათი დამორჩილების  შემდგომ გიორგი II გარკვეულ დათმობაზე წავიდა და ურჩი ყმები "წყალობით დაფარა". ივანე ლიპარტის ძეს [[სამშვილდე|სამშვილდე]] უბოძა, მის ვაჟს ლიპარტს - [[ლოწობანი|ლოწობანი]] [[რუსთავი|რუსთავის]] ნაცვლად (ეს უკანასკნელი კახელებს გადაეცა), ნიანია ქვაბულის ძეს - თმოგვი, ვარდან სვანთა ერისთავს - ასკალანა და სხვ.
 
 [[1074]] ივანე ლიპარიტის ძე კვლავ განუდგა მეფეს. გიორგი II-მ მესხთა ლაშქრით და კახთა მეფე [[აღსართან I| აღსართანის]] დახმარებით გამდგარი ფეოდალი დაამარცხა. ლიპარიტს ლოწობანი წაართვეს და სამეფოს შემოუერთეს. მალე მეფე და ივანე ლიპარიტის ძე დაზავდნენ. ივანე ერთგულების პირობით [[კლდეკარი|კლდეკარისა]] და სამშვილდის ერისთავად იქნა დამტკიცებული. მაგრამ ურჩმა ფეოდალმა გიორგი II-ის მეციხოვნეებს [[გაგი|გაგი]] გამოსტყუა და განძის პატრონს ფადლონს მიჰყიდა.
 
