*Empty MediaWiki Message*

--- a/ფარსმან_თმოგველი.mw
+++ b/ფარსმან_თმოგველი.mw
@@ -3,7 +3,7 @@
 
 ფარსმან თმოგველი სულას შვილი ყოფილა. შეიძლება ვივარაუდოთ, რომ სულა იყო შვილი ივანე სულას ძისა, რომელმაც X საუკუნის 70-იან წლებში მონაწილეობა მიიღო დავით კურაპალატის ლაშქრობაში ბარდა სკლიაროსის წინააღმდეგ და რომელიც მოხსენიებულია ზარზმის სამრეკლოში ჩატანებულ წარწერაში ეგვტერის ამშენებლად.
 
-XI საუკუნის 50-იან წლებში ფარსმან თმოგველმა, [[ჯაყელი, ბეშქენ I |ბეშქენ ჯაყელთან]] ერთად, მხარი დაუჭირა [[ლიპარიტ IV|ლიპარიტ ბაღვაშს]] [[ბაგრატ IV|ბაგრატ IV-ის]] წინააღმდეგ ბრძოლაში. მესხეთის აზნაურთა მეორე ჯგუფი გამოვიდა ლიპარიტის წინააღმდეგ. ლიპარიტის დამარცხებას მოჰყვა მისი მომხრე მესხი ფეოდალების დამცრობა. როგორც ჩანს, ფარსმან თმოგველს მეფემ ჩამოართვა [[თმოგვი]]. ფარსმან თმოგველი (ისევე როგორც ლიპარიტი) [[ათონის ქართველთა მონასტერი|ათონის ქართველთა მონასტერში]] არსენის სახელით შედგა ბერად. "ათონის კრებულში" შეტანილია ფარსმან თმოგველისა და მისი ძმის გიორგი ჩორჩანელის რამდენიმე [[აღაპი]], საიდანაც ჩანს, რომ ფარსმან თმოგველმა დიდი ღვაწლი დასდო მონასტერს, რის გამოც ის მისი წინამძღვარის გახდა.
+XI საუკუნის 50-იან წლებში ფარსმან თმოგველმა, [[ჯაყელი, ბეშქენ I |ბეშქენ ჯაყელთან]] ერთად, მხარი დაუჭირა [[ლიპარიტ IV|ლიპარიტ ბაღვაშს]] [[ბაგრატ IV|ბაგრატ IV-ის]] წინააღმდეგ ბრძოლაში. მესხეთის აზნაურთა მეორე ჯგუფი გამოვიდა ლიპარიტის წინააღმდეგ. ლიპარიტის დამარცხებას მოჰყვა მისი მომხრე მესხი ფეოდალების დამცრობა. როგორც ჩანს, ფარსმან თმოგველს მეფემ ჩამოართვა [[თმოგვი]]. ფარსმან თმოგველი (ისევე როგორც ლიპარიტი) [[ათონის ივერთა მონასტერი|ათონის ივერთა მონასტერში]] არსენის სახელით შედგა ბერად. "ათონის კრებულში" შეტანილია ფარსმან თმოგველისა და მისი ძმის გიორგი ჩორჩანელის რამდენიმე [[აღაპი]], საიდანაც ჩანს, რომ ფარსმან თმოგველმა დიდი ღვაწლი დასდო მონასტერს, რის გამოც ის მისი წინამძღვარის გახდა.
 
 პირველ თმოგველთა გვარის ისტორია ფარსმან თმოგველით იწყება და ფარსმანითვე მთავრდება: [[გიორგი II, საქართველოს მეფე|გიორგი II-მ]] (1072-1089) თმოგვი უბოძა [[ქუაბულისძე, ნიანია|ნიანია ქუაბულისძეს]], ბოლოს [[თამარი|თამარ]] მეფემ ის გადასცა [[მხარგრძელი, სარგის|სარგის მხარგრძელს]], რომელმაც საფუძველი ჩაუყარა ახალ [[თმოგველები|თმოგველების]] საგვარეულოს (XIII-XIV საუკუნეები).
 
