--- a/ფინეთი.mw
+++ b/ფინეთი.mw
@@ -4,10 +4,10 @@
 
 {| cellpadding=2 cellspacing=0
 |- align=center
-| width="140px" | <div style="background-color: #000; padding: 1px; float: left">[[Image:Finland_flag_300.png|130px|ფინეთის დროშა]]</div>
-| width="140px" | [[Image:Finland_coa.png|130px|ფინეთის გერბი]]
+| width="140px" | <div style="background-color: #000; padding: 1px; float: left">[[Image:Flag of Finland.svg|130px|ფინეთის დროშა]]</div>
+| width="140px" | [[Image:Coat of arms of Finland.svg|130px|ფინეთის გერბი]]
 |- align=center
-| ([[ფინეთის დროშა|დეტალურად]]) || ([[Media:Finland_coa.png|სრული ზომა]])
+| ([[ფინეთის დროშა|დეტალურად]]) || ([[Media:Coat of arms of Finland.svg|სრული ზომა]])
 |}
 
 |-
