*Empty MediaWiki Message*

--- a/ჯინჯერ_როჯერსი.mw
+++ b/ჯინჯერ_როჯერსი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Fredginger.jpg|ფრედი და ჯინჯერი ცეკვაში ”კვამლი შენს თვალებში”, რობერტადან, 1935]]
+[[სურათი:Fredginger.jpg|thumb|250px|ფრედი და ჯინჯერი ცეკვაში ”კვამლი შენს თვალებში”, რობერტადან, 1935]]
 '''ჯინჯერ როჯერსი''' (Ginger Rogers) ([[16 ივლისი]], [[1911]] – [[25 აპრილი]], [[1995]]) იყო ლეგენდარული ამერიკელი მსახიობი და მოცეკვავე. ყველაზე ცნობილია, როგორც [[ასტერი, ფრედ|ფრედ ასტერის]] რომანტიული ინტერესი და ცეკვის პარტნიორი ათ ცეკვა-სიმღერის ჰოლივუდურ მიუზიკლთა სერიაში, თუმცა მისი სამსახიობო კარიერა ოცდაათ წელზე მეტს გრძელდებოდა.
 
 ==ადრეული ბიოგრაფია==
