--- a/16_ივლისი.mw
+++ b/16_ივლისი.mw
@@ -10,6 +10,7 @@
 
 ==ამ დღეს დაბადებულნი==
 *[[1872]] : [[ამუნდსენ, როალდ]] - ნორვეგიელი მკვლევარი (გ.[[1928]])
+*[[1911]] : [[როჯერსი, ჯინჯერ]] - ამერიკელი მსახიობი, მოცეკვავე (გ. [[1995]])
 *[[1964]] : [[ბურჯანაძე, ნინო]] - ქართველი პოლიტიკური მოღვაწე
 
 ==ამ დღეს გარდაცვლილნი==
