*Empty MediaWiki Message*

--- a/ქავთარ_ივანეს_ძე.mw
+++ b/ქავთარ_ივანეს_ძე.mw
@@ -1,4 +1,4 @@
-'''ქავთარ ივანეს ძე''', XII საუკუნის II ნახევრის ქართველი დიდებული. საქართველოს მეფის [[გიორგი III|გიორგი III-ის]] ([[1156]]-[[1184]]) [[მეჯინიბეთუხუცესი]] [[1177]] წლამდე. [[ინგოროყვა, პავლე|პ. ინგოროყვას]] აზრით, ის იყო [[აბულეთისძენი|აბულეთისძეთა]] საგვარეულოდან და გიორგი III-მ შეიყვანა სავაზიროში. ეს თვალსაზრისი წყაროებით არ დასტურდება. [[მესხი, შოთა|შ. მესხიას]] აზრით, ქავთარ ივანეს ძე იყო გიორგი III-ის ამირსპასალარ [[ორბელი, ივანე სუმბატის ძე|ივანე ორბელისა]] და ამირახორ [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ ორბელის]] ძმა. სახელისა და მამის სახელის მიხედვით ქავთარ ივანეს ძე მართლაც ან ორბელი უნდა იყოს, ან ტბელი. მან უღალატა გიორგი III-ს და მონაწილეობა მიიღო მეფის წინააღმდეგ [[დემნა (დემეტრე) უფლისწული|დემნა უფლისწულისა]] და [[ორბელთა აჯანყება 1177-1178|ორბელთა აჯანყებაში]] [[1177]]. აჯანყებულებმა ის ქართლის ერისთავ [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ სუმბატის ძე ორბელთან]] და [[ანანია დვინელი|ანანია დვინელთან]] ერთად გაგზავნეს დახმარების სათხოვნელად საქართველოს მეზობელ მაჰმადიანურ სახელმწიფოებში. აჯანყების დამარცხების შემდეგ ქავთარ ივანეს ძე აღარ იხსენიება წყაროებში. 1177 მეჯინიბეთუხუცესობა გიორგი III-მ ჭიაბერს უწყალობა.
+'''ქავთარ ივანეს ძე''', XII საუკუნის II ნახევრის ქართველი დიდებული. საქართველოს მეფის [[გიორგი III|გიორგი III-ის]] ([[1156]]-[[1184]]) [[მეჯინიბეთუხუცესი]] [[1177]] წლამდე. [[ინგოროყვა, პავლე|პ. ინგოროყვას]] აზრით, ის იყო [[აბულეთისძენი|აბულეთისძეთა]] საგვარეულოდან და გიორგი III-მ შეიყვანა სავაზიროში. ეს თვალსაზრისი წყაროებით არ დასტურდება. [[მესხი, შოთა|შ. მესხიას]] აზრით, ქავთარ ივანეს ძე იყო გიორგი III-ის ამირსპასალარ [[ორბელი, ივანე სუმბატის ძე|ივანე ორბელისა]] და ამირახორ [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ ორბელის]] ძმა. სახელისა და მამის სახელის მიხედვით ქავთარ ივანეს ძე მართლაც ან ორბელი უნდა იყოს, ან ტბელი. მან უღალატა გიორგი III-ს და მონაწილეობა მიიღო მეფის წინააღმდეგ [[დემნა (დემეტრე) უფლისწული|დემნა უფლისწულისა]] და [[ორბელთა აჯანყება 1177-1178|ორბელთა აჯანყებაში]] [[1177]]. აჯანყებულებმა ის ქართლის ერისთავ [[ორბელი, ლიპარიტ სუმბატის ძე|ლიპარიტ სუმბატის ძე ორბელთან]] და [[დვინელი, ანანია|ანანია დვინელთან]] ერთად გაგზავნეს დახმარების სათხოვნელად საქართველოს მეზობელ მაჰმადიანურ სახელმწიფოებში. აჯანყების დამარცხების შემდეგ ქავთარ ივანეს ძე აღარ იხსენიება წყაროებში. 1177 მეჯინიბეთუხუცესობა გიორგი III-მ ჭიაბერს უწყალობა.
 
 
 [[კატეგორია:ქართველები]]
