--- a/ლოს-ანჯელესი.mw
+++ b/ლოს-ანჯელესი.mw
@@ -1,9 +1,9 @@
 {| border="1" cellpadding="2" style="float:right; border-collapse:collapse; border-color:#e3e3e3; background-color:#fefefe; width:307px; margin-bottom:15px; margin-left:1em; font-size:95%;"
-! style="background: #e3e3e3;" colspan="2" | ლოს-ანჟელესი
+! style="background: #e3e3e3;" colspan="2" | ლოს-ანჯელესი
 |- bgcolor="#FFFFFF" align="center"
 | colspan="2" | [[სურათი:LosAngeles06.jpg|300px|center]]
 |-
-! style="background: #e3e3e3;" colspan="2" | ქალაქის მდებარეობა კალიფორნიაში და ლოს-ანჟელესის ქაუნთი
+! style="background: #e3e3e3;" colspan="2" | ქალაქის მდებარეობა კალიფორნიაში და ლოს-ანჯელესის ქაუნთი
 |- bgcolor="#FFFFFF" align="center"
 | colspan="2" | [[სურათი:Los_Angeles_Lage.png|center|300px]]
 |-
@@ -22,11 +22,11 @@
 |- 
 | [[აშშ-ის შტატები|შტატი]]: || [[კალიფორნია]]
 |-
-| [[ქაუნთი]]: || [[ლოს-ანჟელეს ქაუნთი|ლოს-ანჟელესი]]
+| [[ქაუნთი]]: || [[ლოს-ანჯელეს ქაუნთი|ლოს-ანჯელესი]]
 |- 
 | [[დროის სარტყელი]]: || წყნარი ოკეანის სტანდ. დრო (UTC-8)
 |- 
-| [[მოსახლეობა]] [[ქალაქი]]: <br />- [[ლოს-ანჟელეს ქაუნთი|ქაუნთი]]: <br />- [[აგლომერაცია]]:
+| [[მოსახლეობა]] [[ქალაქი]]: <br />- [[ლოს-ანჯელეს ქაუნთი|ქაუნთი]]: <br />- [[აგლომერაცია]]:
 | 3.877.129 <small>''(2005)''</small> <br />10.226.506 <br />17.545.623 
 |- 
 | [[სიმჭიდროვე]]: || 3.004 ად./კმ²
@@ -54,9 +54,9 @@
 ! colspan="2" | [[სურათი:Los Angeles urban sprawl.jpg|center|300px]]
 |}
 
-ქალაქი '''ლოს-ანჟელესი''', შემოკლებით '''ელ-ეი''' (LA), ''ანგელოზთა ქალაქი'', [[კალიფორნია]], მოსახლეობით [[აშშ]]-ის სიდიდით მეორე ქალაქია [[ნიუ-იორკი|ნიუ-იორკის]] შემდეგ. ქალაქის სტატუსი მიენიჭა [[1850]] წლის [[4 აპრილი|4 აპრილს]] და ამავე სახელწოდების ქაუნთის ადმ. ცენტრია. 2000 წლის ცენზის მიხედვით მისი მოსახლეობა შეადგენდა 3,69 მილიონს, თუმცა 2004 წლის 1 ივლისის აღწერით ქალაქის მოსახლეობამ 3,85 მილიონს მიაღწია, ქაუნთის საერთო 10 მილიონი მცხოვრებიდან. ქალაქი სამხრეთ კალიფორნიის ურბანული აგლომერაციების ცენტრი და უმნიშვნელოვანესი ნაწილია. მისი ფართობია 1200 კვ.კმ, რითაც ის ნიუ-იორკს და [[ჩიკაგო|ჩიკაგოს]] აღემატება.
+ქალაქი '''ლოს-ანჯელესი''', შემოკლებით '''ელ-ეი''' (LA), ''ანგელოზთა ქალაქი'', [[კალიფორნია]], მოსახლეობით [[აშშ]]-ის სიდიდით მეორე ქალაქია [[ნიუ-იორკი|ნიუ-იორკის]] შემდეგ. ქალაქის სტატუსი მიენიჭა [[1850]] წლის [[4 აპრილი|4 აპრილს]] და ამავე სახელწოდების ქაუნთის ადმ. ცენტრია. 2000 წლის ცენზის მიხედვით მისი მოსახლეობა შეადგენდა 3,69 მილიონს, თუმცა 2004 წლის 1 ივლისის აღწერით ქალაქის მოსახლეობამ 3,85 მილიონს მიაღწია, ქაუნთის საერთო 10 მილიონი მცხოვრებიდან. ქალაქი სამხრეთ კალიფორნიის ურბანული აგლომერაციების ცენტრი და უმნიშვნელოვანესი ნაწილია. მისი ფართობია 1200 კვ.კმ, რითაც ის ნიუ-იორკს და [[ჩიკაგო|ჩიკაგოს]] აღემატება.
 
-ლოს-ანჟელესი ქვეყნის ერთ-ერთი კულტურულ, ეკონომიკური, სამეცნიერო და გართობის ცენტრია. ქალაქი ასევე მსოფლიოს ერთ-ერთი ყველაზე კოსმოპოლიტი ადგილია, ისევე როგორც შემოქმედების ვანგარდი, სადაც თავს იყრის დედამიწის ფაქტიურად ყველა ერის წარმომადგენელი. აქ ჩამოსულ ადამიანებს ყოველთვის ხიბლავდა ქალაქის საამური კლიმატი, ცოცხალი ცხოვრების რიტმი, უდიდესი ენერგია, წყნარი ოკეანეზე მთავარი გასასვლელის სტატუსი და ”ამერიკული ოცნების” განხორციელების შესაძლებლობანი. 1932 და 1984 წლებში ლოს-ანჟელესი ოლიმპიურ თამაშებს მასპინძლობდა.
+ლოს-ანჯელესი ქვეყნის ერთ-ერთი კულტურულ, ეკონომიკური, სამეცნიერო და გართობის ცენტრია. ქალაქი ასევე მსოფლიოს ერთ-ერთი ყველაზე კოსმოპოლიტი ადგილია, ისევე როგორც შემოქმედების ვანგარდი, სადაც თავს იყრის დედამიწის ფაქტიურად ყველა ერის წარმომადგენელი. აქ ჩამოსულ ადამიანებს ყოველთვის ხიბლავდა ქალაქის საამური კლიმატი, ცოცხალი ცხოვრების რიტმი, უდიდესი ენერგია, წყნარი ოკეანეზე მთავარი გასასვლელის სტატუსი და ”ამერიკული ოცნების” განხორციელების შესაძლებლობანი. 1932 და 1984 წლებში ლოს-ანჯელესი ოლიმპიურ თამაშებს მასპინძლობდა.
 
 
 
