--- a/თბილისის_სახელმწიფო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_უნივერსიტეტი.mw
@@ -12,7 +12,7 @@
 *[http://www.tsu.viam.hepi.edu.ge თსუ-ს ისტორია]
 
 [[კატეგორია:საქართველოს უნივერსიტეტები]]
-[[კატეგორია:თბილისი
+[[კატეგორია:თბილისი]]
 
 [[de:Staatliche Universität Tiflis]]
 [[en:Tbilisi State University]]
