*Empty MediaWiki Message*

--- a/ჟანა_დ'არკი.mw
+++ b/ჟანა_დ'არკი.mw
@@ -1,3 +1,4 @@
+{{შერწყმა}}
 [[სურათი:Ingres coronation charles vii.jpg|thumb|150px|ჟანა დ'არკი]]
 '''ჟანა დ'არკი''' (''[[ფრანგული ენა|ფრანგ.]]:'' Jeanne d’Arc)  ''იგივე'' '''[[ორლეანელი ქალწული]]''' (''[[ფრანგული ენა|ფრანგ.]]:'' la Pucelle d’Orléans) (* [[6 იანვარი]] [[1412]], [[დონრემი-ლა-პიუსელი]], [[ლოთარინგია]]; † [[30 მაისი]] [[1431]], [[რუენი]], [[საფრანგეთი]]) - საფრანგეთის ეროვნული გმირი და წმინდანი.
 
