--- a/ჟანა_დ'არკი.mw
+++ b/ჟანა_დ'არკი.mw
@@ -14,6 +14,8 @@
 
 
 [[კატეგორია:ფრანგები]]
+[[კატეგორია:კათოლიკური ეკლესიის წმინდანები]]
+[[კატეგორია:საფრანგეთის ეროვნული გმირები]]
 [[კატეგორია:დაბადებული 1412 ]]
 [[კატეგორია: გარდაცვლილი 1431 ]]
 
