--- a/ცნობილი_ქართველები:_ქ.mw
+++ b/ცნობილი_ქართველები:_ქ.mw
@@ -113,7 +113,7 @@
 
 == ქუ ==
 
-* [[ქუაბულისძე ნიანია]] - დიდგვაროვანი ფეოდალი
+* [[ქუაბულისძე, ნიანია]] - დიდგვაროვანი ფეოდალი
 * [[ქუთათელაძე, აპოლონ]] - ფერმწერი
 * [[ქუთათელაძე, გიორგი]] - საბჭოთა მხედართუფროსი
 * [[ქუთათელაძე, გურამ]] - ფერმწერი
