--- a/ცნობილი_ქართველები:_ჯ.mw
+++ b/ცნობილი_ქართველები:_ჯ.mw
@@ -83,13 +83,13 @@
 * [[ჯაყელი, ბოცო]] -  სამხრეთ საქართველოს წარჩინებული ფეოდალი
 * [[ჯაყელი, გაიოზ]] - ინჟინერი ხიდებისა და გვირაბების მშენებლობის დარგში
 * [[ჯაყელი, კრავაი]] - საქართველოს პოლიტიკური მოღვაწე
-* [[ჯაყელი, მურმან]] - სამხრეთ საქართველოს წარჩინებული ფეოდალი
+* [[ჯაყელი, მურვან]] - სამხრეთ საქართველოს წარჩინებული ფეოდალი
 * [[ჯაყელი, ყვარყვარე-ივანე]]
 * [[ჯაში, გიორგი]] - ფერმწერი
 * [[ჯაში, ივანე]] - აგრონომი
 * [[ჯაში, მაკარ]] - პარტიული და საბჭოთა სახელმწიფო მოღვაწე
 * [[ჯაში, ნიკოლოზ]] - ხელოვნებათმცოდნე
-* [[ჯახუა, კირილე]] - საბჭოტა გენერალ-მაიორი
+* [[ჯახუა, კირილე]] - საბჭოთა გენერალ-მაიორი
 
 ==ჯგ==
 * [[ჯგუბურია, გიორგი]] - სოციალისტური შრომის გმირი
