--- a/Intel.mw
+++ b/Intel.mw
@@ -1,4 +1,4 @@
-[[სურათი:Intel-logo.svg|80px|left|ინტელის ლოგო]]
+[[სურათი:Intel-logo.png|80px|left|ინტელის ლოგო]]
 კორპორაცია '''ინტელი''' ([[ნასდაქი]]: INTC), დაფუძნდა 1968 წელს როგორც '''ინტ'''ეგრირებული '''ელ'''ექტორნიკის კორპორაცია, ამერიკაში მდებარე მულტინაციონალური  კორპორაცია, კარგად ცნობილი მიკროპროცესორებისა და ინტეგრირებული ლოგიკური პანელების დიზაინითა და წარმოებით. ინტელი ასევე აწარმოებს ქსელურ კარტებს, მეინბორდის ჩიპსეტებს, კომპონენტებსა და სხვა მოწყობილობებს. ინტელს მოწინავე კვლევითი პროექტები აქვს [[ნახევარგამტარი|ნახევარგამტართა]] წარმოების ყველა ასპექტში.
 
 
