--- a/26_იანვარი.mw
+++ b/26_იანვარი.mw
@@ -4,6 +4,7 @@
 ==დღის მოვლენები==
 *[[1802]] : გამოცხადდა [[იტალიის რესპუბლიკა|იტალიის რესპუბლიკის]] შექმნა.
 *[[1837]] : [[მიჩიგანი]] გახდა [[აშშ|აშშ-ს]] 26-ე შტატი.
+*[[1918]] : დაარსდა [[თბილისის სახელმწიფო უნივერსიტეტი]].
 *[[1950]] : [[ინდოეთი|ინდოეთმა]] მიიღო პირველი კონსტიტუცია.
 
 ==ამ დღეს დაბადებულნი==
