--- a/თბილისის_სახელმწიფო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_უნივერსიტეტი.mw
@@ -5,13 +5,13 @@
 
 თსუ-ს ახლო მეცნიერული და საგანმანათლებლო კონტაქტები აქვს მსოფლიოს მრავალ უნივერსიტეტთან და სასწავლო ცენტრთან.
 
-უნივერსიტეტის მთავარი დამფუძნებელი იყო ცნობილი ქართველი ისტორიკოსი და აკადემიკოსი ივანე ჯავახიშვილი. თანადამფუძნებლები იყვნენ ასევე გიორგი ახვლედიანი, შალვა ნუცუბიძე, დიმიტრი უზნაძე, გრიგოლ წერეთელი, აკაკი შანიძე, ანდრია რაზმაძე, იოსებ ყიფშიძე, პეტრე მელიქიშვილი და ექვთიმე თაყაიშვილი. პეტრე მელიქიშვილი, ცნობილი ქართველი ქიმიკოსი, არჩეულ იქნა უნივერსიტეტის პირველ რექტორად. 2004 წლიდან თსუ-ს რექტორად რუსუდან ლორთქიფანიძე დაინიშნა.
+უნივერსიტეტის მთავარი დამფუძნებელი იყო ცნობილი ქართველი ისტორიკოსი და აკადემიკოსი [[ჯავახიშვილი, ივანე|ივანე ჯავახიშვილი]]. თანადამფუძნებლები იყვნენ ასევე [[ახვლედიანი, გიორგი|გიორგი ახვლედიანი]], [[ნუცუბიძე, შალვა|შალვა ნუცუბიძე]], [[უზნაძე, დიმიტრი|დიმიტრი უზნაძე]], [[წერეთელი, გრიგოლ|გრიგოლ წერეთელი]], [[შანიძე, აკაკი|აკაკი შანიძე]], [[რაზმაძე, ანდრია|ანდრია რაზმაძე]], [[ყიფშიძე, იოსებ|იოსებ ყიფშიძე]], [[მელიქიშვილი, პეტრე|პეტრე მელიქიშვილი]] და [[თაყაიშვილი, ექვთიმე|ექვთიმე თაყაიშვილი]]. პეტრე მელიქიშვილი, ცნობილი ქართველი ქიმიკოსი, არჩეულ იქნა უნივერსიტეტის პირველ რექტორად. 2004 წლიდან თსუ-ს რექტორად [[ლორთქიფანიძე, რუსუდან|რუსუდან ლორთქიფანიძე]] დაინიშნა.
 
 ==რესეურსები ინტერნეტში==
 *[http://www.tsu.ge თსუ-ს ოფიციალური ვებ-გვერდი]
 *[http://www.tsu.viam.hepi.edu.ge თსუ-ს ისტორია]
 
-[[კატეგორია:საქართველოს უნივერსიტეტები]]
+[[კატეგორია:საქართველოს უმაღლესი სასწავლებლები]]
 [[კატეგორია:თბილისი]]
 
 [[de:Staatliche Universität Tiflis]]
