*Empty MediaWiki Message*

--- a/დიმიტრი_უზნაძე.mw
+++ b/დიმიტრი_უზნაძე.mw
@@ -1,4 +1,5 @@
-'''დიმიტრი უზნაძე''' ([[2 დეკემბერი]], [[1886]] - [[9 ოქტომბერი]], [[1950]]) ცნობილი ქართველი ფსიქოლოგი, ფილოსოფოსი და საზოგადოებრივი მოღვაწე, საქართველოს ფსიქოლოგიის მეცნიერული სკოლის დამფუძნებელი, თბილისის სახელმწიფო უნივერსიტეტის თანადამფუძნებელი, აკადემიკოსი, საქართველოს მენიერებათა აკადემიის თანადამფუძნებელი, საქართველოს დამსახურებული მეცნიერ-მუშაკი, მეცნიერებათა დოქტორი, პროფესორი.
+[[სურათი:DimitriUznadze.jpg|thumb|დიმიტრი უზნაძე]]
+'''დიმიტრი უზნაძე''' ([[2 დეკემბერი]], [[1886]] - [[9 ოქტომბერი]], [[1950]]) ცნობილი ქართველი ფსიქოლოგი, ფილოსოფოსი და საზოგადო მოღვაწე, საქართველოს ფსიქოლოგიის მეცნიერული სკოლის დამფუძნებელი, თბილისის სახელმწიფო უნივერსიტეტის თანადამფუძნებელი, აკადემიკოსი, საქართველოს მენიერებათა აკადემიის თანადამფუძნებელი, საქართველოს დამსახურებული მეცნიერ-მუშაკი, მეცნიერებათა დოქტორი, პროფესორი.
 
 ==ბიოგრაფია==
 დიმიტრი უზნაძე დაიბადა 1886 წელს სოფელ საქარაში (დას. საქართველო). 1904 წელს [[ქუთაისის ქართული გიმნაზია]] დაამთავრა. 1909 წელს [[ლაიფციგის უნივერსიტეტი|ლაიფციგის უნივერსიტეტის]] ფილოსოფიის ფაკულტეტს ამთავრებს. 1910 წელს დოქტორის ხარისხს იცავს [[ვიტენბერგის უნივერსიტეტი|ვიტენბერგის უნივერსიტეტში]] ([[ჰალე]], [[გერმანია]]).
