*Empty MediaWiki Message*

--- a/ჩაჩიკაშვილები.mw
+++ b/ჩაჩიკაშვილები.mw
@@ -1,6 +1,6 @@
 '''ჩაჩიკაშვილები''',  ქართველ კალიგრაფ-მწერალთა ოჯახი. მოღვაწეობდნენ XVIII-XIX საუკუნეებში.
 
-'''ნიკოლოზ მღვდელი''' (* უხნობია ―   †  1810), მისი ვაჟები '''კორნილიე ანუ კორნილიოსი''' და '''თომა'''. 
+'''ნიკოლოზ მღვდელი''' (* უცნობია ―   †  [[1810]]), მისი ვაჟები '''კორნილიე ანუ კორნილიოსი''' და '''თომა'''. 
 
 ნიკოლოზი თავის დროზე ცნობილი "მწერალთაგანი" იყო. გადაწერილი აქვს უმეტესად სასულიერო შინაარსის წიგნები: კურთხევანი 1758 წლისა ([[ხელნაწერთა ინსტიტუტი]], A-1465), თვეთა მეტყველება 1802 წლისა (A-1321), კურთხევანი 1760 წლისა (A-465), აგრეთვე  საერო შინაარსის წიგნები: მსოფლიო ისტორია 1769 წლისა (A-657), წიგნი ისტორია - ზნეობრივი არაკების კრებული, 1793 წლისა (A-1168).
 
@@ -9,3 +9,4 @@
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:ქართველი კალიგრაფები]]
+[[კატეგორია:გარდაცვლილი 1810]]
