--- a/ცნობილი_ქართველები:_ჩ.mw
+++ b/ცნობილი_ქართველები:_ჩ.mw
@@ -94,7 +94,7 @@
 * [[ჩოლოყაშვილი, დავით]] - პოეტი, დრამატურგი, მთარგმნელი
 * [[ჩოლოყაშვილი, ილია]] - რუსეთის არმიის გენერალ-მაიორი
 * [[ჩოლოყაშვილი, ნიკოლოზ]] - პოლიტიკური მოღვაწე და დიპლომატი
-* [[ჩოლოყაშვილი, რევაზ XVII საუკუნის 40-იან წლებში]] - კახეთის სამეფოს სახლთუხუცესი
+* [[ჩოლოყაშვილი, რევაზ (XVII ს.)]] - კახეთის სამეფოს სახლთუხუცესი
 * [[ჩოლოყაშვილი, რევაზ]] - კახეთის სამეფოს სახლთუხუცესი
 * [[ჩოლოყაშვილი, სოლომონ]] - აგრონომ-მევენახე
 * [[ჩოლოყაშვილი, ქაიხოსრო]] - სამხედრო მოღვაწე
