--- a/ბრუკლინის_ხიდი.mw
+++ b/ბრუკლინის_ხიდი.mw
@@ -18,5 +18,6 @@
 [[lb:Brooklyn Bréck]]
 [[nl:Brooklyn Bridge]]
 [[no:Brooklyn Bridge]]
+[[pt:Ponte de Brooklyn]]
 [[sv:Brooklyn Bridge]]
 [[tr:Brooklyn Köprüsü]]
