*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -1,7 +1,7 @@
-'''ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) (* ? ―   †   [[ძვ. წ. 503]]), [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. 
+'''პუბლიუს ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) (* ? ―   †   [[ძვ. წ. 503]]), [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. 
 
+პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და 
 
-{{ესკიზი}}
 
 {{რომის რესპუბლიკის მოღვაწეები}}
 
