*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -1,7 +1,11 @@
 '''პუბლიუს ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) (* ? ―   †   [[ძვ. წ. 503]]), [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. 
 
-პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო. 
+პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო {{სქოლიო|1|რომ}}. 
 
+
+
+----
+* {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
 
 {{რომის რესპუბლიკის მოღვაწეები}}
 
