--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -1,6 +1,8 @@
 '''პუბლიუს ვალერიუს ვოლუსი პოპლიკოლა''' (P. Valerius Volusi f. Publicola) (* ? ―   †   [[ძვ. წ. 503]]), [[რომის რესპუბლიკა|რომის]] [[კონსული]] [[ძვ. წ. 509]] - [[ძვ. წ. 507]] და [[ძვ. წ. 504]] წლებში. 
 
-პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო {{სქოლიო|1|რომ}}. 
+პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო {{სქოლიო|1|რომ}}.
+
+ჯერ კიდევ მეფის განდევნამდე პუბლუს ვალერიუსმა თაისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახალ დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. 
 
 
 
