*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -2,7 +2,7 @@
 
 პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო {{სქოლიო|1|რომ}}.
 
-ჯერ კიდევ მეფის განდევნამდე პუბლუს ვალერიუსმა თაისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახალ დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. 
+ჯერ კიდევ [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] განდევნამდე პუბლუს ვალერიუსმა თავისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახალ დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. მაგრამ პირველ საკონსულო არჩევნებზე გაიმარჯვეს [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსმა]] და ტარკვინიუს კოლატინუსმა.
 
 
 
