*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -4,10 +4,14 @@
 
 ჯერ კიდევ [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] განდევნამდე პუბლუს ვალერიუსმა თავისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი, ამიტომაც მას პოპლიკოლა ([[ლათინური ენა|ლათ.]] poplicola) შეარქვეს. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახლად დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. მაგრამ, მიუხედავად იმისა რომ მეფის დამხობაში აქტიურ მონაწილეობას იღებდა, პირველ საკონსულო არჩევნებზე გაიმარჯვეს [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსმა]] და ტარკვინიუს კოლატინუსმა.
 
+როგორც ავღიშნეთ, პოპლიკოლა აქტიურ მონაწილეობას იღებდა გადატრიალებაში, მიუხედავად იმისა, რომ იგი პირადად არ ემტერებოდა სამეფო ოჯახს, ამიტომ რომაელები მას არ ენდობოდნენ. პოპლიკოლა ამით შეურაცხყოფილი იყო და შეწყვიტა სენატის სხდომებში მონაწილეობის მიღება. ხოლო როდესაც ბრუტუსმა სენატორებს და რომის მოსახლეობას მოსთხოვა დაეფიცებინათ, რომ ისინი არ დაუშვებდნენ მეფის მმართველობას რომში, პოპლიკოლა მოვიდა ფორუმზე და დაიფიცა.
+
+როდესაც რომში ტარკვინიუსის ელჩები ჩამოვიდნენ და სცადეს რესპუბლიკელების წინააღმდეგ შეთქმულების მოწყობა{{სქოლიო|2|ბრუტ}}
 
 
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
+* {{სქოლიო2|ბრუტ}} - ამის შესახებ დაწვრილებით [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსის]] ბიოგრაფიაში იხილეთ.
 
 {{რომის რესპუბლიკის მოღვაწეები}}
 
