*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -6,12 +6,13 @@
 
 როგორც ავღიშნეთ, პოპლიკოლა აქტიურ მონაწილეობას იღებდა გადატრიალებაში, მიუხედავად იმისა, რომ იგი პირადად არ ემტერებოდა სამეფო ოჯახს, ამიტომ რომაელები მას არ ენდობოდნენ. პოპლიკოლა ამით შეურაცხყოფილი იყო და შეწყვიტა სენატის სხდომებში მონაწილეობის მიღება. ხოლო როდესაც ბრუტუსმა სენატორებს და რომის მოსახლეობას მოსთხოვა დაეფიცებინათ, რომ ისინი არ დაუშვებდნენ მეფის მმართველობას რომში, პოპლიკოლა მოვიდა ფორუმზე და დაიფიცა.
 
-როდესაც რომში ტარკვინიუსის ელჩები ჩამოვიდნენ და სცადეს რესპუბლიკელების წინააღმდეგ შეთქმულების მოწყობა{{სქოლიო|2|ბრუტ}}
+როდესაც რომში ტარკვინიუსის ელჩები ჩამოვიდნენ და სცადეს რესპუბლიკელების წინააღმდეგ შეთქმულების მოწყობა{{სქოლიო|2|ბრუტ}}, პოპლიკოლამ მოღალატეთა მხილებაში აქტიური მონაწილეობა მიიღო. ამ მოვლენებმა მას რომაელი ხალხის სიყვარული და ნდობა მოუტანა. ტარკვინიუს კოლატინუსის{{სქოლიო|3|კოლატინუსი}} გადადგომის და განდევნის შემდეგ კი იგი ბრუტუსთან ერთად მეორე კონსული გახდა.
 
 
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
 * {{სქოლიო2|ბრუტ}} - ამის შესახებ დაწვრილებით [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსის]] ბიოგრაფიაში იხილეთ.
+* {{სქოლიო2|კოლატინუსი}} - პლუტრქეს და ტიტუს ლივიუს ეს ამბები ცოტა სხვადასხვანაერად აქვთ აღწერილი. ლივიუსის მიხედვით კოლატინუსს რომი ტარკვინიუსის ელჩების ჩამოსვლამდე დაატოვებინეს, მხოლოდ იმიტომ, ტომ მასაც ტარკვინიუსი ერქვა. ხოლო პლუტარქეს მიხედვით ამ შეთქმულების დროს იგი ჯერ კიდევ კონსული იყო, მაგრამ სულიერი სისუსტე გამოიჩინა, რადგან შეთქმულთა რიცხში მისი ნათესავებიც იყვნენ და ამის შემდეგ მოუწია რომიდან წასვლა.
 
 {{რომის რესპუბლიკის მოღვაწეები}}
 
