*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -8,6 +8,8 @@
 
 როდესაც რომში ტარკვინიუსის ელჩები ჩამოვიდნენ და სცადეს რესპუბლიკელების წინააღმდეგ შეთქმულების მოწყობა{{სქოლიო|2|ბრუტ}}, პოპლიკოლამ მოღალატეთა მხილებაში აქტიური მონაწილეობა მიიღო. ამ მოვლენებმა მას რომაელი ხალხის სიყვარული და ნდობა მოუტანა. ტარკვინიუს კოლატინუსის{{სქოლიო|3|კოლატინუსი}} გადადგომის და განდევნის შემდეგ კი იგი ბრუტუსთან ერთად მეორე კონსული გახდა.
 
+ტარკვინიუსმა კი, რადგან შეთქმულებით ვერაფერს ვერ მიაღწია, დაარწმუნა ეტრუსკები გამოსულიყვნენ რომაელების წინააღმდეგ. ბრძლაში დაიღუპა ბრუტუსიც და ტარკვინიუსის ვაჟი ატუნტუსიც. ისინი ბრძოლის დაწყების თანავე ეძგერნენ ერთმანეთს და შუბებით განგმირეს ერთმანეთი. ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა გაიმარჯვეს. პოპლიკოლა კი ტრიუმფით დაბრუნდა რომში.
+
 
 
 ----
