--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -2,7 +2,7 @@
 
 პუბლიუს ვალერიუსი ითვლება სწორედ იმ ვალერიუსის ჩამომავლად, რომელმაც შეარიგა [[რომულუსი]] და ტატიუსი და ორი ერის გაერთიანებას ხელი შეუწყო {{სქოლიო|1|რომ}}.
 
-ჯერ კიდევ [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] განდევნამდე პუბლუს ვალერიუსმა თავისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი, ამიტომაც მას პოპლიკოლა ([[ლათინური ენა|ლათ.]] poplicola) შეარქვეს. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახლად დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. მაგრამ, მიუხედავად იმისა რომ მეფის დამხობაში აქტიურ მონაწილეობას იღებდა, პირველ საკონსულო არჩევნებზე გაიმარჯვეს [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსმა]] და ტარკვინიუს კოლატინუსმა.
+ჯერ კიდევ [[ლუციუს ტარკვინიუს სუპერბუსი|ტარკვინიუსის]] განდევნამდე პუბლუს ვალერიუსმა თავისი სიკეთით, გულისხმიერებით და უხვობით გაითქვა სახელი. იგი მდიდარი ადამიანი იყო და ყველა გაჭირვებულს ეხმარებოდა. ყველა მოელოდა რომ მეფის დამხობის შემდეგ იგი ერთერთი ყველაზე გავლენიანი ადანიანი გახდებოდა ახლად დაარსებულ [[რომის რესპუბლიკა|რესპუბლიკაში]]. მაგრამ, მიუხედავად იმისა რომ მეფის დამხობაში აქტიურ მონაწილეობას იღებდა, პირველ საკონსულო არჩევნებზე გაიმარჯვეს [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსმა]] და ტარკვინიუს კოლატინუსმა.
 
 როგორც ავღიშნეთ, პოპლიკოლა აქტიურ მონაწილეობას იღებდა გადატრიალებაში, მიუხედავად იმისა, რომ იგი პირადად არ ემტერებოდა სამეფო ოჯახს, ამიტომ რომაელები მას არ ენდობოდნენ. პოპლიკოლა ამით შეურაცხყოფილი იყო და შეწყვიტა სენატის სხდომებში მონაწილეობის მიღება. ხოლო როდესაც ბრუტუსმა სენატორებს და რომის მოსახლეობას მოსთხოვა დაეფიცებინათ, რომ ისინი არ დაუშვებდნენ მეფის მმართველობას რომში, პოპლიკოლა მოვიდა ფორუმზე და დაიფიცა.
 
@@ -10,12 +10,15 @@
 
 ტარკვინიუსმა კი, რადგან შეთქმულებით ვერაფერს ვერ მიაღწია, დაარწმუნა ეტრუსკები გამოსულიყვნენ რომაელების წინააღმდეგ. ბრძლაში დაიღუპა ბრუტუსიც და ტარკვინიუსის ვაჟი ატუნტუსიც. ისინი ბრძოლის დაწყების თანავე ეძგერნენ ერთმანეთს და შუბებით განგმირეს ერთმანეთი. ბრძოლა ძალიან სასტიკი იყო, მაგრამ რომაელებმა გაიმარჯვეს. პოპლიკოლა კი ტრიუმფით დაბრუნდა რომში.
 
+მალე კი პოპლიკოლას პოპულარობა ისევ უნდობლობით შეიცვალა. ამბობდნენ თითქოს კონსულს გამეფება უნდა, რომ იგი ტარკვინიუსზე უფრო მდიდარ სახლში ცხოვრობს ველიას ბორცვზე. როდესაც მან გაიგო თუ რას ამბობდა მასზე ხალხო, დაიქირავა მუშები და ერთ ღამეში დაანგრევინა სახლი თვითონ კი მეგობრებთან გადასახლდა. მოგვიანებით რომაელებმა მას უბოძეს მიწის ნაკვეთი სადაც აუშენეს სახლი{{სქოლიო|4|სახლი}}.
 
+მან ასე
 
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
 * {{სქოლიო2|ბრუტ}} - ამის შესახებ დაწვრილებით [[ლუციუს იუნიუს ბრუტუსი|ბრუტუსის]] ბიოგრაფიაში იხილეთ.
 * {{სქოლიო2|კოლატინუსი}} - პლუტრქეს და ტიტუს ლივიუს ეს ამბები ცოტა სხვადასხვანაერად აქვთ აღწერილი. ლივიუსის მიხედვით კოლატინუსს რომი ტარკვინიუსის ელჩების ჩამოსვლამდე დაატოვებინეს, მხოლოდ იმიტომ, ტომ მასაც ტარკვინიუსი ერქვა. ხოლო პლუტარქეს მიხედვით ამ შეთქმულების დროს იგი ჯერ კიდევ კონსული იყო, მაგრამ სულიერი სისუსტე გამოიჩინა, რადგან შეთქმულთა რიცხში მისი ნათესავებიც იყვნენ და ამის შემდეგ მოუწია რომიდან წასვლა.
+* {{სქოლიო2|სახლი}} - ლივიუსის მიხედვით მან თვითონ აიშენა სახლი.
 
 {{რომის რესპუბლიკის მოღვაწეები}}
 
