*Empty MediaWiki Message*

--- a/ეკონომისტი_(ჟურნალი).mw
+++ b/ეკონომისტი_(ჟურნალი).mw
@@ -3,7 +3,7 @@
 
 ჟურნალის სარჩევის სლოგანის მიხედვით, მისი მიზანია მონაწილეობა მიიღოს "მკაცრ კონკურსში ცოდნასა, რომელიც პროგრესულია, და ემეცრებას, რომელიც პროგრესს ობსტრუქციას უწევს, შორის". ძირითადი თემებია საერთაშორისო სიახლეები, ეკონომიკა, პოლიტიკა, ბიზნესი, ფინანსები, მეცნიერება, ტექნოლოგია და ხელოვნება. პუბლიკაცია გამიზნულია ბაზრის მაღალ "პრესტიჟულ" სეგმენტზე და მის აუდიენციად გავლენიანი ბიზნეს და სამთავრობო გადაწყვეტილებათა მიმღები წრეები ითვლება.
 
-მას, როგორც წესი, უჭირავს მკაცრად სარედკოლეგიო შეხედულება მრავალ საკითხზე, განსაკუთრებით [[თავისუფალი ვაჟრობა|თავისუფალ ვაჭრობასა]] და ფისკალურ კონსევატივიზმთან მიმართებაში; შესაბამისად, ის ადვოკაციურ ჟურნალიზმს მიჰყვება.
+მას, როგორც წესი, უჭირავს მკაცრად სარედკოლეგიო შეხედულება მრავალ საკითხზე, განსაკუთრებით [[თავისუფალი ვაჭრობა|თავისუფალ ვაჭრობასა]] და ფისკალურ კონსევატივიზმთან მიმართებაში; შესაბამისად, ის ადვოკაციურ ჟურნალიზმს მიჰყვება.
 
 ეკონომისტი საკუთარ თავს გაზეთს უწოდებს, რაც მის ლეგალურ სტატუსს ასახავს ამ ფორმით მშობლიურ ტერიტორიაზე, ინგლისში, რეგისტრაციის გამო. თუმცა სხვა გაზეთებისგან განსხვავებით ის ჟურნალის ფორმით იბეჭდება პრიალა ქაღალდზე.
 
