--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -12,7 +12,9 @@
 
 მალე კი პოპლიკოლას პოპულარობა ისევ უნდობლობით შეიცვალა. ამბობდნენ თითქოს კონსულს გამეფება უნდა, რომ იგი ტარკვინიუსზე უფრო მდიდარ სახლში ცხოვრობს ველიას ბორცვზე. როდესაც მან გაიგო თუ რას ამბობდა მასზე ხალხო, დაიქირავა მუშები და ერთ ღამეში დაანგრევინა სახლი თვითონ კი მეგობრებთან გადასახლდა. მოგვიანებით რომაელებმა მას უბოძეს მიწის ნაკვეთი სადაც აუშენეს სახლი{{სქოლიო|4|სახლი}}.
 
-მან ასე
+ხალხის გულის მოსაგებად და დემოკრატიის გასაძლიერებლად მან [[ლიქტორები|ლიქტორების]] [[ფასცები|ფასცებიდან]] ბრძანა ამოეღოთ ნაჯახები და სახალხო კრებებზე უნდა დაეშვათ. ამან გაამართლა და კონსულის პოპულარობა კვლავ გაიზარდა, თან მას პუპლიკოლა შეარქვეს ([[ლათინური ენა|ლათ.]] poplicola - ხალხის მეგობარი).
+
+
 
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
