*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -12,7 +12,11 @@
 
 მალე კი პოპლიკოლას პოპულარობა ისევ უნდობლობით შეიცვალა. ამბობდნენ თითქოს კონსულს გამეფება უნდა, რომ იგი ტარკვინიუსზე უფრო მდიდარ სახლში ცხოვრობს ველიას ბორცვზე. როდესაც მან გაიგო თუ რას ამბობდა მასზე ხალხო, დაიქირავა მუშები და ერთ ღამეში დაანგრევინა სახლი თვითონ კი მეგობრებთან გადასახლდა. მოგვიანებით რომაელებმა მას უბოძეს მიწის ნაკვეთი სადაც აუშენეს სახლი{{სქოლიო|4|სახლი}}.
 
-ხალხის გულის მოსაგებად და დემოკრატიის გასაძლიერებლად მან [[ლიქტორები|ლიქტორების]] [[ფასცები|ფასცებიდან]] ბრძანა ამოეღოთ ნაჯახები და სახალხო კრებებზე უნდა დაეშვათ. ამან გაამართლა და კონსულის პოპულარობა კვლავ გაიზარდა, თან მას პუპლიკოლა შეარქვეს ([[ლათინური ენა|ლათ.]] poplicola - ხალხის მეგობარი).
+ხალხის გულის მოსაგებად და დემოკრატიის გასაძლიერებლად მან [[ლიქტორები|ლიქტორების]] [[ფასცები|ფასცებიდან]] ბრძანა ამოეღოთ ნაჯახები და სახალხო კრებებზე უნდა დაეშვათ. ამან გაამართლა და კონსულის პოპულარობა კვლავ გაიზარდა, თან მას პოპლიკოლა შეარქვეს ([[ლათინური ენა|ლათ.]] poplicola - ხალხის მეგობარი).
+
+პოპლიკოლამ შეავსო სენატის შემადგენლობა, შემდეგ შემოიტანა კანონი, რომლის მიხედვითან ხალხს ჰქონდა უფლება მაგისტრების და კონსულის გადაწყვეტილებების გასაჩივრება. მან ასევე დააკანონა იმათი სიკვდილით დასჯა, ვინც ეცდება ძალით მოიპოვოს ხელისუფლება. მან ასევე გაანთავისუფლა ღარიბები ნალოგებისგან, კონსულის არ დამორჩილება ისჯებოდა ჯარიმით 5 ძროხა და 2 ცხვარი. იმ დროს რომაელებში ფული ჯერ არ იყო ფართოთ გავრცელებული და ქონება საქონლის რაოდენობით იზომებოდა. ხოლო თუ ვინმე მოისურვებდა სამეფო ძალაუფლებას იგი და მისი ქონება იწყევლებოდა.
+
+
 
 
 
