*Empty MediaWiki Message*

--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -16,8 +16,7 @@
 
 პოპლიკოლამ შეავსო სენატის შემადგენლობა, შემდეგ შემოიტანა კანონი, რომლის მიხედვითან ხალხს ჰქონდა უფლება მაგისტრების და კონსულის გადაწყვეტილებების გასაჩივრება. მან ასევე დააკანონა იმათი სიკვდილით დასჯა, ვინც ეცდება ძალით მოიპოვოს ხელისუფლება. მან ასევე გაანთავისუფლა ღარიბები ნალოგებისგან, კონსულის არ დამორჩილება ისჯებოდა ჯარიმით 5 ძროხა და 2 ცხვარი. იმ დროს რომაელებში ფული ჯერ არ იყო ფართოთ გავრცელებული და ქონება საქონლის რაოდენობით იზომებოდა. ხოლო თუ ვინმე მოისურვებდა სამეფო ძალაუფლებას იგი და მისი ქონება იწყევლებოდა.
 
-
-
+პოპლიკოლას არ სურდა თვითონ ემართა ფინანსური საკითხები და პასუხი ეგებინა სახელმწიფო ხაზინაზე, ამიტომ მან დააწესა რომ ხაზინა [[სატურნი (ღმერთი)|სატურნის ტაძარში ყოფილიყო, ხოლო მისი მმართველობა არჩევით კვესტორებს ევალებოდათ. ამ ღონისძიებების ჩატარების შემდეგ მან კონსულის არჩევნები მოაწყო სადაც ლუკრეციუსმა გაიმარჯვა, მაგრამ ეს უკანასკნელი რამოდენიმე დღეში მოკვდა და არჩევნები ხელმეორედ ჩატარდა და მარკუს ჰორაციუსმა გაიმარჯვა.
 
 
 ----
