--- a/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
+++ b/პუბლიუს_ვალერიუს_პუბლიკოლა.mw
@@ -18,7 +18,9 @@
 
 პოპლიკოლას არ სურდა თვითონ ემართა ფინანსური საკითხები და პასუხი ეგებინა სახელმწიფო ხაზინაზე, ამიტომ მან დააწესა რომ ხაზინა [[სატურნი (ღმერთი)|სატურნის]] ტაძარში ყოფილიყო, ხოლო მისი მმართველობა არჩევით კვესტორებს ევალებოდათ. ამ ღონისძიებების ჩატარების შემდეგ მან კონსულის არჩევნები მოაწყო სადაც ლუკრეციუსმა გაიმარჯვა, მაგრამ ეს უკანასკნელი რამოდენიმე დღეში მოკვდა და არჩევნები ხელმეორედ ჩატარდა და მარკუს ჰორაციუსმა გაიმარჯვა.
 
-მომავალ 508 წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად, და მასთან ერთად ტიტუს ლუკრეციუსი. ტარკვინიუსი კი იმ ბრძოლის შემდეგ, სადაც მან ვაჟი დაკარგა, მივიდა ლარსუს პორსენუსთან და დახმარება სთხოვა. პორსენუსის ჯარი რომს მიადგა. მათ მალე დაიკავეს ტიბროსის მარჯვენა ნაპირვე გამაგრებული ბორცვი იანიკულუსი. მდინარის პირზე გაიმართა გაცხარებული ბრძოლა, სადაც ორივე კონსული მძიმედ დაიჭრა. ამის გამო რომაელები მორალურად დაეცნენ და უკან დაიხიეს. მტრების ჯარი ტიბროსზე ხიდს მოადგა, როლის შემდეგაც იწყებოდა რომი, მაგრამ ჰორაციუს კოკლესმა{{სქოლიო|5|კოკლესი}}, გერმანიუსმა და ლარციუსმა შეაჩერეს მტერი, სანამ დანარჩენმა ჯარისკაცებმა მოასწრეს ხიდის დანგრევა.
+[[ძვ. წ. 508]] წელს პოპლიკოლა კიდევ ერთხელ აირჩიეს კონსულად, და მასთან ერთად ტიტუს ლუკრეციუსი. ტარკვინიუსი კი იმ ბრძოლის შემდეგ, სადაც მან ვაჟი დაკარგა, მივიდა ლარსუს პორსენუსთან და დახმარება სთხოვა. პორსენუსის ჯარი რომს მიადგა. მათ მალე დაიკავეს ტიბროსის მარჯვენა ნაპირვე გამაგრებული ბორცვი იანიკულუსი. მდინარის პირზე გაიმართა გაცხარებული ბრძოლა, სადაც ორივე კონსული მძიმედ დაიჭრა. ამის გამო რომაელები მორალურად დაეცნენ და უკან დაიხიეს. მტრების ჯარი ტიბროსზე ხიდს მოადგა, როლის შემდეგაც იწყებოდა რომი, მაგრამ ჰორაციუს კოკლესმა{{სქოლიო|5|კოკლესი}}, გერმანიუსმა და ლარციუსმა შეაჩერეს მტერი, სანამ დანარჩენმა ჯარისკაცებმა მოასწრეს ხიდის დანგრევა. კოკლესის გმირობით აღფრთოვანებულმა პოპლიკომან ბრძანა გამოეწოთ მისთვის იმდენი მიწა, რამდენის მოხვნასაც იგი ერთ დღეში შეძლებდა და ყველა რომაელს მოუწოდა ქონების ნაწილი მიეცათ მისთვის, ხოლო მოგვიანებით მას ქანდაკება დაუდგეს.
+
+პორსენუსმა რომს ალყა შემოარტყა. ამ დროს კიდევ ერთი ეტრუსკული ჯარი მოადგა რომს, რომელიც რომაელებმა დაამარცხეს და განდევნეს. პოპლიკოლა კი მესამედ აირჩიეს კონსულად. ამ პერიოდში კიდევ ერთი გმირობა ჩასიდინა რომაელმა მუციუსმა. მან ერტუსკად გადაიცვა და პორსენუსის ბანაკში შეიპარა, იგი მეფეს სახეზე არ იცნობდა, ამიტომ მოკლა ვინც მეფე ეგონა. იგი დაიჭირეს და დასაკითხად მეფეს მიგვარეს. აქ ცხელი ნაკვერჩლები იყო რომელიც პორსენუსს მსხვერპლშეწირვისთვის სჭირდებოდა. მუციუსმა ხელი დაადო მაკვერჩლებს და არ აიღო სანამ განცვიფრებულმა მეფემ მას ხმალი არ დაუბრუნა და არ გაათავისუფლა. მაშინ მუციუსმა მადლობის ნიშნათ უთხრა რომ მის ბანაკში მის გარდა კიდევ 300 გადაცმული რომაელია, ვინხ მეფის მოკვლას აპირებს. 
 
 ----
 * {{სქოლიო2|რომ}} - იხილეთ [[რომულუსი]]
